# WMark

./: .gitignore  CMakeLists.txt  README.md  cmake  logos.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
